--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0.5;
+    margin:1;
     padding: 0;
     box-sizing: border-box;
 }
@@ -53,10 +53,12 @@
     width: 17vw;
     height: 30px;
     background-color: white;
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-top: 30px;
+    margin-bottom: 10px;
     border-radius: 7px;
     border: 1px solid black;
+    text-align: center;
+    font-size:16px
 
 }
 
@@ -65,14 +67,17 @@
     height: 30px;
     background-color: white;
     margin-top: 30px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     border-radius: 7px;
     border: 1px solid black;
+    text-align: center;
+    font-size:16px
 }
 
 .normal-text {
     font-size: 20px;
     color: white;
+    text-align:center
 }
 
 .button {
