--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -14,7 +14,9 @@
             </div>
             <div class="box-2">
                 <div class="top-section">
-                    <div class="registered-image"></div>
+                    <div class="registered-image">
+                        <img id="student-photo" src="/static/default-profile.png" alt="Student Image" class="student-photo">
+                    </div>
 
                     <div class="student-name"></div>
                     <p class="normal-text">Name</p>
@@ -25,7 +27,7 @@
                 </div>
                 <div class="bottom-section">
                     <button class="button register-btn">Register Student</button>
-                    <button class="button">View Records</button>
+                    <button class="button" onclick="openExcel()">View Records</button>
                 </div>
             </div>
         </div>
